// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer should not render if no children 1`] = `null`;

exports[`Drawer should render 1`] = `
<div
  className="tc-drawer undefined tc-drawer-transition"
  style={undefined}
>
  <div
    className={undefined}
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "overflow": "hidden",
        }
      }
    >
      <div
        className=""
      >
        <h1>
          Hello world
        </h1>
      </div>
      <div
        className={undefined}
      >
        <nav
          className="tc-actionbar-container nav"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer should render stacked 1`] = `
<div
  className="tc-drawer undefined tc-drawer-transition undefined stacked"
  style={undefined}
>
  <div
    className={undefined}
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "overflow": "hidden",
        }
      }
    >
      <div
        className=""
      >
        <h1>
          Hello world
        </h1>
      </div>
      <div
        className={undefined}
      >
        <nav
          className="tc-actionbar-container nav"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer should render using custom className 1`] = `
<div
  className="my-custom-drawer tc-drawer undefined tc-drawer-transition"
  style={undefined}
>
  <div
    className={undefined}
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "overflow": "hidden",
        }
      }
    >
      <div
        className=""
      >
        <h1>
          Hello world
        </h1>
      </div>
      <div
        className={undefined}
      >
        <nav
          className="tc-actionbar-container nav"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer should render using custom styles 1`] = `
<div
  className="tc-drawer undefined tc-drawer-transition"
  style={
    Object {
      "top": 45,
    }
  }
>
  <div
    className={undefined}
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "overflow": "hidden",
        }
      }
    >
      <div
        className=""
      >
        <h1>
          Hello world
        </h1>
      </div>
      <div
        className={undefined}
      >
        <nav
          className="tc-actionbar-container nav"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer should render with tabs 1`] = `
<div
  className="tc-drawer undefined tc-drawer-transition"
  style={undefined}
>
  <div
    className={undefined}
  >
    <nav
      className="nav tc-tab-bar"
    >
      <ul
        className="nav nav-tabs tc-tab-bar-actions"
      >
        <li
          className="tc-tab-bar-action"
        >
          <button
            className="btn btn-link"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            role={null}
            type="button"
          >
            <span>
              Tab 1
            </span>
          </button>
        </li>
        <li
          className="tc-tab-bar-action active"
        >
          <button
            className="btn btn-link"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            role={null}
            type="button"
          >
            <span>
              Tab 2
            </span>
          </button>
        </li>
      </ul>
    </nav>
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "overflow": "hidden",
        }
      }
    >
      <div
        className=""
      >
        <h1>
          Hello world
        </h1>
      </div>
      <div
        className={undefined}
      >
        <nav
          className="tc-actionbar-container nav"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer should render without tc-drawer-transition class 1`] = `
<div
  className="tc-drawer"
  style={undefined}
>
  <div
    className={undefined}
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "overflow": "hidden",
        }
      }
    >
      <div
        className=""
      >
        <h1>
          Hello world
        </h1>
      </div>
      <div
        className={undefined}
      >
        <nav
          className="tc-actionbar-container nav"
        />
      </div>
    </div>
  </div>
</div>
`;
